[package]
name = "data_loader"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.53"
clap = { version = "3.2.14", features = ["cargo"] }
config = "0.13.0"
diesel = { version = "1.4.8", features = ["postgres"] }
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
hyper = { version = "0.14.20", features = ["server", "http1", "tcp"] }
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = { version = "0.13.3", features = ["process"] }
serde = "1.0.140"
serde_json = "1.0.82"
solana-client = "1.11.4"
solana-sdk = "1.11.4"
solana-transaction-status = "1.11.4"
solana-storage-bigtable = "1.11.4"
tokio = { version = "1.14.1", features = ["full"] }
