[package]
edition = "2021"
name = "epoch_rewards_tracker"
description = "Solana epoch and rewards tracking service"
version = "0.3.1"
readme = "README.md"


[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["cargo"] }
config = "0.13.0"
env_logger = "0.9.0"
futures = "0.3.21"
hyper = { version = "0.14.20", features = ["server", "http1", "tcp"] }
log = "0.4.17"
prometheus = { version = "0.13.3", features = ["process"] }
serde = "1.0.140"
serde_json = "1.0.82"
solana-account-decoder = "1.11.4"
solana-client = "1.16.4"
solana-sdk = "1.16.4"
solana-transaction-status = "1.16.4"
thiserror = "1.0.31"
tokio = { version = "1.14.1", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-serde_json-1"] }

[package.metadata.deb]
name = "epoch-tracker"
priority = "optional"
depends = ""
maintainer-scripts = "pkg/debian/"
assets = [
    [
        "target/x86_64-unknown-linux-musl/release/metaplex_indexer_epoch_rewards_tracker",
        "/usr/bin/metaplex_indexer_epoch_rewards_tracker",
        "755",
    ],
    [
        "Config.example.toml",
        "/etc/epoch-tracker/Config.toml",
        "644",
    ],
]
systemd-units = { unit-name = "epoch-tracker", unit-scripts = "pkg/common", enable = true }
conf-files = ["/etc/epoch-tracker/Config.toml"]
